--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>RecepiesAngularApp</title>
+  <title>Recipes just right for you!</title>
   <base href="/">
 
  <meta http-equiv=X-UA-Compatible content="IE=edge">
