--- a/src/server/public/index.html
+++ b/src/server/public/index.html
@@ -9,8 +9,8 @@
  <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link href="styles.bundle.css" rel="stylesheet"/></head>
+<link href="styles.2f4f67dae895f4277249.bundle.css" rel="stylesheet"/></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
+<script type="text/javascript" src="inline.14c612a5cdf4373f5d5e.bundle.js"></script><script type="text/javascript" src="polyfills.da120ff97cc40b45fa3e.bundle.js"></script><script type="text/javascript" src="vendor.e3dc94f8588916247f5b.bundle.js"></script><script type="text/javascript" src="main.55e6a5e06840fdaad6e8.bundle.js"></script></body>
 </html>
